src/test/resources/purescript_examples/passing/NegativeBinder.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Type)
          PureASTWrapperElement(TypeAtom)
            PureASTWrapperElement(TypeConstructor)
              PureASTWrapperElement(Qualified)
                PsiElement(proper name)('Number')
                PsiElement(whitespace)(' ')
          PsiElement(->)('->')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeConstructor)
                PureASTWrapperElement(Qualified)
                  PsiElement(proper name)('Boolean')
                  PsiElement(whitespace)('\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(NumberBinder)
            PsiElement(operator)('-')
            PsiElement(natural)('1')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(BooleanLiteral)
              PsiElement(false)('false')
              PsiElement(whitespace)('\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('test')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(NullBinder)
            PsiElement(identifier)('_')
            PsiElement(whitespace)('  ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(BooleanLiteral)
              PsiElement(true)('true')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Debug')
                  PsiElement(.)('.')
                PureASTWrapperElement(ModuleName)
                  PsiElement(proper name)('Trace')
                  PsiElement(.)('.')
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(StringLiteral)
              PsiElement(string)('"Done"')
              PsiElement(whitespace)('\n')
